--- a/app/src/main/res/menu/menu_nav_drawer.xml
+++ b/app/src/main/res/menu/menu_nav_drawer.xml
@@ -17,6 +17,11 @@
             android:id="@+id/mb_settings"
             android:icon="@drawable/baseline_app_settings_alt_24"
             android:title="@string/settings" />
+
+        <item
+            android:id="@+id/mb_profile"
+            android:icon="@drawable/baseline_person_24"
+            android:title="@string/profile" />
     </group>
 
     <item
