--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,22 +2,20 @@
     <!-- Base application theme. -->
     <style name="Base.Theme.BudgetBuddy" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/light_blue</item>
+        <item name="colorPrimaryVariant">@color/black</item>
+        <item name="colorSecondary">@color/light_blue</item>
         <item name="android:statusBarColor">@color/light_blue</item>
-        <item name="windowActionBar">false</item>
+    </style>
+
+    <style name="Theme.Button" parent="Base.Theme.BudgetBuddy">
+        <item name="android:textColor">@color/black</item>
+        <item name="background">@color/white</item>
+        <item name="iconTint">@color/black</item>
     </style>
 
     <style name="Theme.BudgetBuddy" parent="Base.Theme.BudgetBuddy" />
 
-    <style name="Base.Theme.BottomNavigation" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="colorPrimary">@color/white</item>
-        <item name="colorPrimaryVariant">@color/light_blue</item>
-        <item name="android:statusBarColor">@color/light_blue</item>
-    </style>
-
-    <style name="Theme.BottomNavigation" parent="Base.Theme.BottomNavigation"/>
-
     <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
-        <item name="android:color">@color/black</item>
+        <item name="android:color">@color/white</item>
     </style>
 </resources>
