--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -36,6 +36,7 @@
 
     <Button
         android:id="@+id/btSignIn"
+
         style="@style/Theme.Button"
         android:layout_width="200dp"
         android:layout_height="46dp"
@@ -68,6 +69,7 @@
         android:layout_marginStart="50dp"
         android:backgroundTintMode="add"
         android:gravity="center"
+        android:theme="@style/Theme.Button"
         app:icon="@drawable/googleg_standard_color_18"
         app:iconGravity="textEnd"
         app:iconPadding="2dp"
@@ -83,6 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Facebook"
+        android:theme="@style/Theme.Button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btTwitterLogin"
         app:layout_constraintStart_toEndOf="@+id/btGoogleLogin"
