--- a/app/src/main/res/layout/dialog_new_record.xml
+++ b/app/src/main/res/layout/dialog_new_record.xml
@@ -19,18 +19,18 @@
             android:layout_height="match_parent"
             android:padding="20dp">
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/new_balance"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/new_record"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/etNewRecordAmount"
-                android:layout_width="181dp"
+                android:layout_width="295dp"
                 android:layout_height="48dp"
                 android:layout_marginTop="24dp"
                 android:ems="10"
