BalanceFragment finished, with a donut chart

--- a/app/src/main/res/layout/fragment_balance.xml
+++ b/app/src/main/res/layout/fragment_balance.xml
@@ -33,5 +33,65 @@
             app:layout_constraintTop_toTopOf="@+id/txtBalance"
             app:tint="@color/light_blue" />
 
+        <com.github.mikephil.charting.charts.PieChart
+            android:id="@+id/chartBalance"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="16dp"
+            android:scrollbarSize="20dp"
+            app:layout_constraintBottom_toTopOf="@+id/recviewRecentRecords"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtThisMonth" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recviewRecentRecords"
+            android:layout_width="0dp"
+            android:layout_height="200dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tabLayoutBalance"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="32dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtBalance">
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabIncomesBalance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/incomes" />
+
+            <com.google.android.material.tabs.TabItem
+                android:id="@+id/tabOutgoingsBalance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/outgoings" />
+        </com.google.android.material.tabs.TabLayout>
+
+        <TextView
+            android:id="@+id/txtThisMonth"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/this_month"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tabLayoutBalance" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
